Updated health report module and added PDF service